Solved flex exercises

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
+/* 
+*{
+  border: 1px solid red;
+} */
 html, body {
   height: 100%;
 }
@@ -20,6 +23,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
 }
 
 .icon {
@@ -33,6 +37,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px;
+}
+.container {
+  flex: 1;
 }
 
 .close-button {
@@ -60,10 +68,22 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+  margin: 10px 5px;
 }
 
 button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+  margin: 10px 5px;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 5px;
+}
+
+div.text {
+  margin: 10px 5px;
 }
