--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,8 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -35,6 +37,8 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  height: 35px;
+  margin: 5px;
 }
 
 a {
@@ -46,3 +50,16 @@ a {
 ul {
   list-style-type: none;
 }
+
+.links {
+display: flex;
+align-items: center;
+}
+
+.left, .right {
+  /* flex */
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
