--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,18 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.all {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.bottom-section {
+  display: flex;
+}
+
+.card {
+  flex: 1;
+}
